--- a/style.css
+++ b/style.css
@@ -1,1 +1,5 @@
-style.css
+.pageOne {
+	background-image: url("https://images.unsplash.com/photo-1473101167633-bfa08e705e4b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=570a2526e1c172e8b225052d87436ce9&auto=format&fit=crop&w=1500&q=80");
+	background-size: cover;
+	height: 800px;
+}
